[workspace]
resolver = "2"
members = [
    "tcpping-server",
    "tcpping-client",
    "tcpping-common"
]

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.3", features = ["derive"] }
anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
